# Magma

./: .gitignore  CLAUDE.md  README.md  TAURI.md  index.html  package-lock.json  package.json  server.js
meshes/: GenesisMagma.opt.glb  Raceway.opt.glb  TURacer.opt.glb  Toyota.opt.glb  WomanWalk.opt.glb  manRun.opt.glb  manWalk.opt.glb  racerRun.opt.glb  racerWalk.opt.glb  tree.opt.glb  womanRun.opt.glb
scripts/: copy-web.mjs
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
