[package]
name = "genesis-magma"
version = "0.1.0"
description = "Genesis Magma — WebGL 주행 시뮬레이션 (Tauri 래퍼)"
authors = ["Y.M. Kang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
